assert(IncrementalInline || (_late_inlines.length() == 0 && !has_mh_late_inlines()))

XMLWordPrintable

    • b14

        Almost all vector tests (jdk/incubator/vector/) crashed with
        # Internal Error (/home/katya/work/JavaSE/Hotspot/ws/jdk.panama-dev/open/src/hotspot/share/opto/compile.cpp:696), pid=8135, tid=8164
        # assert(IncrementalInline || (_late_inlines.length() == 0 && !has_mh_late_inlines())) failed: incremental inlining is off
        #

        when running with "-XX:-Inline" with fastdebug build.

        Perhaps it is not very reasonable flag for Vector API (used to get more precise code coverage) but
        it still should not result in crash.

              Assignee:
              Vladimir Ivanov
              Reporter:
              Ekaterina Pavlova
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: