8244675: assert(IncrementalInline || (_late_inlines.length() == 0 && !has_mh_late_inlines()))